Rename package from bug_reporting_system to bug_handler
Updated all import statements and references from bug_reporting_system to bug_handler throughout the codebase. Added a comprehensive README.md for bug_handler, replaced the example app's main.dart with a full Flutter demo, and updated example/pubspec.yaml and pubspec.lock to use bug_handler. Also added workflows/recommended.md and workflows/recommended_ai_version files.

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -1,5 +1,5 @@
-name: bug_reporting_system
-description: "Custom Flutter Components"
+name: bug_handler
+description: "todo"
 version: 1.0.0
 publish_to: none
 
@@ -27,7 +27,6 @@ dependencies:
   network_info_plus: ^7.0.0
   package_info_plus: ^9.0.0
   path_provider: any
-  sentry_flutter: ^9.7.0
   share_plus: ^12.0.1
 
 dev_dependencies:
