--- a/analysis_options.yaml
+++ b/analysis_options.yaml
@@ -1,67 +1,22 @@
-# analysis_options.yaml — publishable packages focus
-# Conservative defaults + strict import/pubspec hygiene for pub.dev
-
-include: package:flutter_lints/flutter.yaml
-
+include: package:very_good_analysis/analysis_options.9.0.0.yaml
 linter:
   rules:
-    # --- Hygiene that directly affects publishability / maintainability ---
-    always_use_package_imports: true
-    avoid_relative_lib_imports: true
-    depend_on_referenced_packages: true
-    implementation_imports: true
-    public_member_api_docs: true
-    secure_pubspec_urls: true               # https:// URLs in pubspec
-
-    library_private_types_in_public_api: true
-
-    # --- Sensible preferences that rarely cause churn ---
-    prefer_single_quotes: true
-    prefer_const_constructors: true
-    sort_pub_dependencies: true
-
-    # --- Turn OFF chatty / conflicting style nits ---
-    prefer_relative_imports: false          # conflicts with package imports
-    lines_longer_than_80_chars: false       # let formatter/IDE handle this
-    constant_identifier_names: false        # don’t fight existing APIs
-    avoid_print: false                      # allow prints in packages by default
-    avoid_redundant_argument_values: false
-
-    # You can re-enable more rules later per repo as you like.
-
-analyzer:
-  # Keep analyzer from touching codegen / tool output
-  exclude:
-    - "**/*.g.dart"
-    - "**/*.freezed.dart"
-    - "**/*.gr.dart"
-    - "**/*.mocks.dart"
-    - "**/*.gen.dart"
-    - "**/*.gql.dart"
-    - "lib/generated/**"
-    - "lib/**/generated/**"
-    - "build/**"
-    - ".dart_tool/**"
-
-  # Escalate only the things that matter for publish; keep noise low.
-  errors:
-    # Publish-safety: FAIL the build if these are violated
-    always_use_package_imports: error
-    avoid_relative_lib_imports: error
-    depend_on_referenced_packages: error
-    implementation_imports: error
-    secure_pubspec_urls: error
-
-    # Keep these helpful but non-blocking
-    library_private_types_in_public_api: warning
-    directives_ordering: warning
-    use_key_in_widget_constructors: warning        # useful in Flutter libs
-    deprecated_member_use_from_same_package: warning
-    unawaited_futures: warning
-    comment_references: info
-    public_member_api_docs: error                   # pana/doc coverage is separate
-
-    # Quiet common time-wasters
-    constant_identifier_names: ignore
-    lines_longer_than_80_chars: ignore
-    prefer_relative_imports: ignore
+    public_member_api_docs: false
+    sort_pub_dependencies: false
+    lines_longer_than_80_chars: false
+    always_use_package_imports: false
+    literal_only_boolean_expressions: false
+    require_trailing_commas: false
+    comment_references: false
+    only_throw_errors: false
+    avoid_positional_boolean_parameters: false
+    use_build_context_synchronously: false
+    always_put_required_named_parameters_first: false
+    use_late_for_private_fields_and_variables: false
+    flutter_style_todos: false
+    no_leading_underscores_for_local_identifiers: false
+    avoid_catches_without_on_clauses: false
+    document_ignores: false
+    depend_on_referenced_packages: false
+    avoid_setters_without_getters: false
+   # avoid_dynamic_calls: false
